@@ -18,6 +18,7 @@ Bug IDs that start with "K" can be found in the Kenai Bugzilla
 		  ----------------------------
 The following bugs have been fixed in the 1.4.5 release.
 
+7021190	MimeMessage.setRecipients(type, String) does not accept null address
 K  4002	MultipartReport.setReport and setDeliveryStatus are broken
 K  4065	Wrong representation of CR/LF are appended to the attachment
 
